--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
-    <h1>Hello World!</h1>
+
+<div id="data">
+
+</div>
+
+<form id="loginForm">
+    <label>
+        Username:
+    </label>
+    <input type="text" placeholder="username" name="username" id="username-input"/>
+    <label>
+        Password:
+    </label>
+    <input type="text" placeholder="password" name="password" id="password-input"/>
+    <button type="submit">Login</button>
+</form>
+
+<script>
+    const form = document.getElementById("loginForm")
+    form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        const username = document.getElementById("username-input").value
+        const password = document.getElementById("password-input").value
+        const credentials = {
+            username,
+            password
+        }
+        console.log(credentials)
+        fetch("/login", {
+            method: "POST",
+            headers: {
+                "content-type": "application/json"
+            },
+            body: JSON.stringify(credentials)
+        }).then(response => response.json()).then((data) => {
+            const token = data.token
+
+            fetch("/todos", {
+                headers: {
+                    "content-type": "application/json",
+                    "authorization": "Bear " + token
+                },
+            }).then(response => response.json()).then((todos) => {
+                const elements = todos.map(todo => {
+                    const divElement = document.createElement("div")
+                    divElement.innerText = todo.name
+                    return divElement
+                })
+                elements.forEach(e => document.getElementById("data").appendChild(e))
+            })
+
+        })
+
+    }, false)
+
+</script>
 </body>
 </html>
